feat: add database schema for users, debt sources, debts, and installments
- Created tables for users, debt_sources, debts, and installments in dbdiagram.dbml.
- Defined relationships between users and their debts, as well as between debts and their sources.

chore: configure ESLint for JavaScript and TypeScript

- Set up ESLint with recommended rules for JavaScript and TypeScript.
- Added custom rules for better code quality and consistency.
- Specified TypeScript configuration for linting TypeScript files.

--- a/src/utils/public/swagger-login.html
+++ b/src/utils/public/swagger-login.html
@@ -1,15 +1,20 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <title>Login para Swagger</title>
-</head>
-<body>
-  <h2>Login necessário</h2>
-  <form method="POST" action="/api/users/login?redirect=/api-docs">
-    <input name="email" type="email" placeholder="E‑mail" required/><br>
-    <input name="password" type="password" placeholder="Senha" required/><br>
-    <button type="submit">Entrar</button>
-  </form>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Login para Swagger</title>
+  </head>
+  <body>
+    <h2>Login necessário</h2>
+    <form method="POST" action="http://localhost:3000/api-docs">
+      <input name="email" type="email" placeholder="Email" required /><br />
+      <input
+        name="password"
+        type="password"
+        placeholder="Senha"
+        required
+      /><br />
+      <button type="submit">Entrar</button>
+    </form>
+  </body>
 </html>
